--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,15 +24,15 @@ jobs:
         run: ./bin/check_formatting.sh
       - name: Comment on Failure
         if: steps.formattingCheck.outcome != 'success'
-        uses: actions/github-script@v4
+        uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_TOKEN }}
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Please run `terraform fmt -recursive` and commit the changes.'
+              body: 'Formatting has not been completed prior to commit. Please run `terraform fmt -recursive` and commit the changes.'
             })
       - name: Fail Run
         if: steps.formattingCheck.outcome != 'success'
