Add Support for TGW Routes & Default IPAM Scope
Allow configuration of addtional routes to be placed into
the Transit Gateway, such as 0.0.0.0/0 out a specific attached
VPC.  Additionally, check if IPAM scope already exists and use
the scope id for all subsequent allocations.  Additional checks
need to be added for the parent pool to check if there is already
a pool but this is a corner case that can wait.

For testing, add support for live integration testing with aws-nuke
support to cleanup any failures.

Closes #2, Closes #10

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     needs:
-      - test
+      - mock
     if: needs.test.outputs.run_live == 'yes'
     steps:
       - name: Checkout code
@@ -51,3 +51,16 @@ jobs:
         run: ./bin/install_deb.sh
       - name: Run Tests
         run: ./bin/run_live_tests.sh
+  cleanup:
+    name: Cleanup live integration terraform-aws-networking
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    needs:
+      - integration
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Tarraform
+        run: ./bin/install_aws_nuke.sh
+      - name: Run Tests
+        run: ./bin/run_nuke.sh
