--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -84,5 +84,5 @@ jobs:
           aws-region: us-west-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: Run Tests
+      - name: Run AWS Nuke
         run: ./bin/run_nuke.sh
